--- a/simplic-sql/Simplic.Sql/Simplic.Sql.csproj
+++ b/simplic-sql/Simplic.Sql/Simplic.Sql.csproj
@@ -48,13 +48,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PreciseDecimalHandler.cs" />
-    <Compile Include="ISqlService.cs" />
+    <Compile Include="TypeHandler\PreciseDecimalHandler.cs" />
+    <Compile Include="Interface\ISqlService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypeHandler.cs" />
+    <Compile Include="TypeHandler\TypeHandler.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.Sql.nuspec" />
   </ItemGroup>
