--- a/simplic-authentication/Simplic.Group/Simplic.Group.csproj
+++ b/simplic-authentication/Simplic.Group/Simplic.Group.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8C891F3E-A6C5-434F-B034-D2FB6D924825}</ProjectGuid>
+    <ProjectGuid>{63E3AC46-8D6E-4B0A-BF8F-F183B29E4CBB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Simplic.User</RootNamespace>
-    <AssemblyName>Simplic.User</AssemblyName>
+    <RootNamespace>Simplic.Group</RootNamespace>
+    <AssemblyName>Simplic.Group</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -40,12 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\IUserService.cs" />
-    <Compile Include="Model\User.cs" />
+    <Compile Include="Interface\IGroupService.cs" />
+    <Compile Include="Model\Group.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Simplic.User.nuspec" />
+    <None Include="Simplic.Group.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
