added nuspec files

--- a/simplic-authentication/Simplic.Authentication/Simplic.Authentication.csproj
+++ b/simplic-authentication/Simplic.Authentication/Simplic.Authentication.csproj
@@ -52,5 +52,8 @@
       <Name>Simplic.UserSession</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Simplic.Authentication.nuspec" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
