nuspec files added

--- a/simplic-configuration/Simplic.Configuration.Data/Simplic.Configuration.Data.csproj
+++ b/simplic-configuration/Simplic.Configuration.Data/Simplic.Configuration.Data.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Simplic.Configuration.Data.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
