--- a/simplic-configuration/Simplic.Configuration.Service/Simplic.Configuration.Service.csproj
+++ b/simplic-configuration/Simplic.Configuration.Service/Simplic.Configuration.Service.csproj
@@ -63,6 +63,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Simplic.Configuration.Service.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
