--- a/simplic-authentication/Simplic.Authentication/Simplic.Authentication.csproj
+++ b/simplic-authentication/Simplic.Authentication/Simplic.Authentication.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Simplic.UserSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.UserSession.1.0.0\lib\net451\Simplic.UserSession.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,12 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simplic.UserSession\Simplic.UserSession.csproj">
-      <Project>{9C5143D6-5A98-493E-AE85-51FB401FD30F}</Project>
-      <Name>Simplic.UserSession</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
+    <None Include="package.bat" />
+    <None Include="packages.config" />
     <None Include="Simplic.Authentication.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
