--- a/simplic-authentication/Simplic.Authentication.Service/Simplic.Authentication.Service.csproj
+++ b/simplic-authentication/Simplic.Authentication.Service/Simplic.Authentication.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9EA6AB91-A661-4310-8573-873627402F47}</ProjectGuid>
+    <ProjectGuid>{734C5B50-8B4C-49A8-A15B-BF322A49D37A}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Simplic.Authorization</RootNamespace>
-    <AssemblyName>Simplic.Authorization</AssemblyName>
+    <RootNamespace>Simplic.Authentication.Service</RootNamespace>
+    <AssemblyName>Simplic.Authentication.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Simplic.Authorization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Authorization.1.0.0\lib\net451\Simplic.Authorization.dll</HintPath>
+    </Reference>
+    <Reference Include="Simplic.Group, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Group.1.0.0\lib\net451\Simplic.Group.dll</HintPath>
+    </Reference>
+    <Reference Include="Simplic.User, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.User.1.0.0\lib\net451\Simplic.User.dll</HintPath>
+    </Reference>
+    <Reference Include="Simplic.UserSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.UserSession.1.0.0\lib\net451\Simplic.UserSession.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -38,22 +50,25 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Unity.Abstractions, Version=3.3.0.0, Culture=neutral, PublicKeyToken=6d32ff45e0ccc69f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Unity.Abstractions.3.3.0\lib\net45\Unity.Abstractions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Interface\IAuthorizationService.cs" />
-    <Compile Include="Model\AccessRightType.cs" />
-    <Compile Include="Model\DataRowAccessRight.cs" />
-    <Compile Include="Model\RowAccess.cs" />
+    <Compile Include="AuthenticationService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Simplic.Authorization.nuspec" />
+    <ProjectReference Include="..\Simplic.Authentication\Simplic.Authentication.csproj">
+      <Project>{ea6bbaea-01c6-4387-85e5-b17f741f9d53}</Project>
+      <Name>Simplic.Authentication</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simplic.UserSession\Simplic.UserSession.csproj">
-      <Project>{9C5143D6-5A98-493E-AE85-51FB401FD30F}</Project>
-      <Name>Simplic.UserSession</Name>
-    </ProjectReference>
+    <None Include="package.bat" />
+    <None Include="packages.config" />
+    <None Include="Simplic.Authentication.Service.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
