--- a/simplic-tracking/Simplic.Tracking.Data.DB/Simplic.Tracking.Data.DB.csproj
+++ b/simplic-tracking/Simplic.Tracking.Data.DB/Simplic.Tracking.Data.DB.csproj
@@ -58,6 +58,7 @@
     <Compile Include="TrackingRepository.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.Tracking.Data.DB.nuspec" />
   </ItemGroup>
