--- a/simplic-tracking/Simplic.Tracking/Simplic.Tracking.csproj
+++ b/simplic-tracking/Simplic.Tracking/Simplic.Tracking.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.Tracking.nuspec" />
   </ItemGroup>
