--- a/simplic-configuration/Simplic.Configuration.Service/Simplic.Configuration.Service.csproj
+++ b/simplic-configuration/Simplic.Configuration.Service/Simplic.Configuration.Service.csproj
@@ -62,6 +62,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.Configuration.Service.nuspec" />
   </ItemGroup>
