--- a/simplic-sql/Simplic.Sql/Simplic.Sql.csproj
+++ b/simplic-sql/Simplic.Sql/Simplic.Sql.csproj
@@ -54,6 +54,7 @@
     <Compile Include="TypeHandler\TypeHandler.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.Sql.nuspec" />
   </ItemGroup>
