--- a/simplic-template-parser/Simplic.TemplateParser/Simplic.TemplateParser.csproj
+++ b/simplic-template-parser/Simplic.TemplateParser/Simplic.TemplateParser.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="packages.config" />
     <None Include="Simplic.TemplateParser.nuspec" />
   </ItemGroup>
