--- a/simplic-user/Simplic.User/Simplic.User.csproj
+++ b/simplic-user/Simplic.User/Simplic.User.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="Simplic.User.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
