--- a/simplic-user/Simplic.UserSession/Simplic.UserSession.csproj
+++ b/simplic-user/Simplic.UserSession/Simplic.UserSession.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="Simplic.UserSession.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
