nuspec files and assembly version files are updated.

--- a/simplic-cache/Simplic.Cache.Service/Simplic.Cache.Service.csproj
+++ b/simplic-cache/Simplic.Cache.Service/Simplic.Cache.Service.csproj
@@ -51,6 +51,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="Simplic.Cache.Service.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
