--- a/simplic-corelib/Simplic.CoreLib/Simplic.CoreLib.csproj
+++ b/simplic-corelib/Simplic.CoreLib/Simplic.CoreLib.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Win_32\WindowsSession.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="Simplic.CoreLib.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
