--- a/simplic-icon/Simplic.Icon/Simplic.Icon.csproj
+++ b/simplic-icon/Simplic.Icon/Simplic.Icon.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="package.bat" />
     <None Include="Simplic.Icon.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
