template parser cleaned up

--- a/simplic-template-parser/Simplic.TemplateParser/Simplic.TemplateParser.nuspec
+++ b/simplic-template-parser/Simplic.TemplateParser/Simplic.TemplateParser.nuspec
@@ -7,7 +7,7 @@
     <authors>SIMPLIC GmbH</authors>
     <owners>SIMPLIC GmbH</owners>
     <projectUrl>https://github.com/simplic/simplic-service</projectUrl>
-    <iconUrl><![CDATA[https://avatars3.githubusercontent.com/u/17578084?s=400&u=e8da257ee7e886b5007b097d4881e1dbc998a826&v=4]]></iconUrl>    
+    <iconUrl><![CDATA[https://avatars0.githubusercontent.com/u/17578084?s=200&v=4]]></iconUrl>    
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>TemplateParser utility used in Simplic products.</description>    
     <copyright>Copyright Simplic GmbH 2018</copyright>
