--- a/simplic-authentication/Simplic.Authentication.Service/packages.config
+++ b/simplic-authentication/Simplic.Authentication.Service/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Simplic.Authorization" version="1.0.0" targetFramework="net451" />
+  <package id="Simplic.CoreLib" version="6.0.18.619" targetFramework="net451" />
   <package id="Simplic.Group" version="1.0.0" targetFramework="net451" />
   <package id="Simplic.User" version="1.0.0" targetFramework="net451" />
   <package id="Simplic.UserSession" version="1.0.0" targetFramework="net451" />
