--- a/simplic-authentication/Simplic.Authentication.Service/Simplic.Authentication.Service.csproj
+++ b/simplic-authentication/Simplic.Authentication.Service/Simplic.Authentication.Service.csproj
@@ -34,21 +34,20 @@
       <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Simplic.Authorization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Authorization.1.0.0\lib\net451\Simplic.Authorization.dll</HintPath>
+    <Reference Include="Simplic.Authorization, Version=6.0.18.620, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Authorization.6.0.18.620\lib\net451\Simplic.Authorization.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.CoreLib, Version=6.0.18.619, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.CoreLib.6.0.18.619\lib\net451\Simplic.CoreLib.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Simplic.CoreLib, Version=6.1.118.621, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.CoreLib.6.1.118.621\lib\net451\Simplic.CoreLib.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.Group, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Group.1.0.0\lib\net451\Simplic.Group.dll</HintPath>
+    <Reference Include="Simplic.Group, Version=6.0.18.619, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Group.6.0.18.619\lib\net451\Simplic.Group.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.User, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.User.1.0.0\lib\net451\Simplic.User.dll</HintPath>
+    <Reference Include="Simplic.Session, Version=6.1.118.622, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Session.6.1.118.622\lib\net451\Simplic.Session.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.UserSession, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.UserSession.1.0.0\lib\net451\Simplic.UserSession.dll</HintPath>
+    <Reference Include="Simplic.User, Version=6.0.18.619, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.User.6.0.18.619\lib\net451\Simplic.User.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
