--- a/simplic-authorization/Simplic.Authorization/packages.config
+++ b/simplic-authorization/Simplic.Authorization/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Simplic.UserSession" version="1.0.0" targetFramework="net451" />
+  <package id="Simplic.Session" version="6.1.118.622" targetFramework="net451" />
 </packages>
