--- a/simplic-configurationanalyser/Simplic.ConfigurationAnalyzer.Service/Simplic.ConfigurationAnalyzer.Service.csproj
+++ b/simplic-configurationanalyser/Simplic.ConfigurationAnalyzer.Service/Simplic.ConfigurationAnalyzer.Service.csproj
@@ -72,6 +72,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationAnalyzerService.cs" />
+    <Compile Include="Linter\DbEventAnalyzer.cs" />
+    <Compile Include="Linter\DbTriggerAnalyzer.cs" />
+    <Compile Include="Linter\GridMenuHasTextAnalyzer.cs" />
+    <Compile Include="Linter\NotExportedWithProductAnalyzer.cs" />
     <Compile Include="Model\GridProfileStatement.cs" />
     <Compile Include="Linter\GridCascadingAddonAnalyzer.cs" />
     <Compile Include="Linter\GridJoinSelectStarAnalyzer.cs" />
