--- a/simplic-authorization/Simplic.Authorization/Simplic.Authorization.csproj
+++ b/simplic-authorization/Simplic.Authorization/Simplic.Authorization.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Interface\IAuthorizationService.cs" />
     <Compile Include="Model\AccessRightType.cs" />
     <Compile Include="Model\DataRowAccessRight.cs" />
+    <Compile Include="Model\MigrationResult.cs" />
+    <Compile Include="Model\MigrationStatus.cs" />
     <Compile Include="Model\RowAccess.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
