--- a/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
+++ b/simplic-datastack/Simplic.DataStack/Simplic.DataStack.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Interface\IStackReportService.cs" />
     <Compile Include="Interface\IStackService.cs" />
+    <Compile Include="Interface\IStackTimestampService.cs" />
+    <Compile Include="Model\InstanceDataTimeStamp.cs" />
     <Compile Include="Model\StackReport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
