--- a/simplic-corelib/Simplic.CoreLib.StringExtraction/Simplic.CoreLib.StringExtraction.csproj
+++ b/simplic-corelib/Simplic.CoreLib.StringExtraction/Simplic.CoreLib.StringExtraction.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CastAsNumberTest.cs" />
     <Compile Include="FindInLineMatchTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
