--- a/simplic-interval/Simplic.Interval.UI/app.config
+++ b/simplic-interval/Simplic.Interval.UI/app.config
@@ -6,6 +6,10 @@
         <assemblyIdentity name="CommonServiceLocator" publicKeyToken="489b6accfaf20ef0" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.4.0" newVersion="2.0.4.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Telerik.Windows.Controls" publicKeyToken="5803cfa389c90ce7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2018.1.122.45" newVersion="2018.1.122.45" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
