--- a/simplic-interval/Simplic.Interval.Service/Simplic.Interval.Service.csproj
+++ b/simplic-interval/Simplic.Interval.Service/Simplic.Interval.Service.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Simplic.Interval.Service</RootNamespace>
     <AssemblyName>Simplic.Interval.Service</AssemblyName>
-    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -30,14 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CommonServiceLocator, Version=2.0.4.0, Culture=neutral, PublicKeyToken=489b6accfaf20ef0, processorArchitecture=MSIL">
-      <HintPath>..\Simplic.Interval\packages\CommonServiceLocator.2.0.4\lib\net46\CommonServiceLocator.dll</HintPath>
-    </Reference>
     <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\Simplic.Interval\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="Simplic.CoreLib, Version=6.12.18.814, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Simplic.Interval\packages\Simplic.CoreLib.6.12.18.814\lib\net451\Simplic.CoreLib.dll</HintPath>
+    <Reference Include="Simplic.CoreLib, Version=6.14.18.814, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\Simplic.Interval\packages\Simplic.CoreLib.6.14.18.814\lib\net451\Simplic.CoreLib.dll</HintPath>
     </Reference>
     <Reference Include="Simplic.Framework">
       <HintPath>..\..\..\simplic-framework\src\Simplic.Main\bin\Debug\Simplic.Framework.dll</HintPath>
@@ -67,7 +65,7 @@
     <None Include="Simplic.Interval.Service.nuspec" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simplic.Interval\Simplic.Interval\Simplic.Interval.csproj">
+    <ProjectReference Include="..\Simplic.Interval\Simplic.Interval.csproj">
       <Project>{8cf0b453-693d-4a3f-92cc-6f339f661897}</Project>
       <Name>Simplic.Interval</Name>
     </ProjectReference>
