--- a/simplic-data/Simplic.Data.Sql/Simplic.Data.Sql.csproj
+++ b/simplic-data/Simplic.Data.Sql/Simplic.Data.Sql.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{73192760-F6D4-43B5-98D1-9DD2C2D9EC10}</ProjectGuid>
+    <ProjectGuid>{BCB1856C-0BCC-4167-B232-E1D0BFC14845}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Simplic.TaskScheduler.Service</RootNamespace>
-    <AssemblyName>Simplic.TaskScheduler.Service</AssemblyName>
+    <RootNamespace>Simplic.Data.Sql</RootNamespace>
+    <AssemblyName>Simplic.Data.Sql</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,8 +30,20 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Simplic.Data, Version=1.0.18.925, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Simplic.Data.1.0.18.925\lib\net451\Simplic.Data.dll</HintPath>
+    <Reference Include="Dapper, Version=1.50.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.1.50.5\lib\net451\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Simplic.Cache, Version=6.0.18.619, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Cache.6.0.18.619\lib\net451\Simplic.Cache.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Simplic.CoreLib, Version=6.14.318.906, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.CoreLib.6.14.318.906\lib\net451\Simplic.CoreLib.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Simplic.Sql, Version=6.2.18.926, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Sql.6.2.18.926\lib\net451\Simplic.Sql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -44,19 +56,19 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="TaskSchedulerConfigurationService.cs" />
+    <Compile Include="SqlRepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Simplic.TaskScheduler\Simplic.TaskScheduler.csproj">
-      <Project>{E24B2BA8-3B06-49A3-9211-89229378D859}</Project>
-      <Name>Simplic.TaskScheduler</Name>
+    <ProjectReference Include="..\Simplic.Data\Simplic.Data.csproj">
+      <Project>{DDA22FE5-3893-4C26-A1AD-EB19A9379BC7}</Project>
+      <Name>Simplic.Data</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="package.bat" />
     <None Include="packages.config" />
-    <None Include="Simplic.TaskScheduler.Service.nuspec" />
+    <None Include="Simplic.Data.Sql.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
