--- a/simplic-taskscheduler/Simplic.TaskScheduler.Data.DB/packages.config
+++ b/simplic-taskscheduler/Simplic.TaskScheduler.Data.DB/packages.config
@@ -3,5 +3,6 @@
   <package id="Dapper" version="1.50.5" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Simplic.CoreLib" version="6.0.18.63" targetFramework="net451" />
+  <package id="Simplic.Data" version="1.0.18.925" targetFramework="net451" />
   <package id="Simplic.Sql" version="6.1.18.625" targetFramework="net451" />
 </packages>
