--- a/simplic-session/Simplic.Session/Simplic.Session.csproj
+++ b/simplic-session/Simplic.Session/Simplic.Session.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arguments\SelectedTenantsChangedArgs.cs" />
     <Compile Include="Interface\ISessionService.cs" />
     <Compile Include="Model\Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -47,6 +48,11 @@
   <ItemGroup>
     <None Include="package.bat" />
     <None Include="Simplic.Session.nuspec" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Simplic.Tenant">
+      <Version>1.0.19.101</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
