--- a/simplic-session/MigrationBackup/967f0278/Simplic.Session.Service/packages.config
+++ b/simplic-session/MigrationBackup/967f0278/Simplic.Session.Service/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Simplic.Session" version="6.1.118.622" targetFramework="net451" />
+  <package id="Simplic.Tenant" version="1.0.19.101" targetFramework="net451" />
 </packages>
