--- a/simplic-session/MigrationBackup/a93e9082/Simplic.Session/Simplic.Session.csproj
+++ b/simplic-session/MigrationBackup/a93e9082/Simplic.Session/Simplic.Session.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FFB4870B-A518-4EFF-A8EB-853153B3835E}</ProjectGuid>
+    <ProjectGuid>{99EDC33D-D2F4-4311-A21B-931940CFBABC}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Simplic.Session.Service</RootNamespace>
-    <AssemblyName>Simplic.Session.Service</AssemblyName>
+    <RootNamespace>Simplic.Session</RootNamespace>
+    <AssemblyName>Simplic.Session</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Simplic.Tenant, Version=1.0.19.101, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Simplic.Tenant.1.0.19.101\lib\net451\Simplic.Tenant.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,23 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SessionService.cs" />
+    <Compile Include="Interface\ISessionService.cs" />
+    <Compile Include="Model\Session.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="package.bat" />
-    <None Include="Simplic.Session.Service.nuspec" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Simplic.Session\Simplic.Session.csproj">
-      <Project>{99edc33d-d2f4-4311-a21b-931940cfbabc}</Project>
-      <Name>Simplic.Session</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Simplic.Tenant">
-      <Version>1.0.19.101</Version>
-    </PackageReference>
+    <None Include="packages.config" />
+    <None Include="Simplic.Session.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
