--- a/simplic-interval/Simplic.Interval.Service/packages.config
+++ b/simplic-interval/Simplic.Interval.Service/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Dapper" version="1.50.5" targetFramework="net461" />
-  <package id="Simplic.CoreLib" version="6.14.18.814" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
+  <package id="Simplic.CoreLib" version="6.16.18.1125" targetFramework="net451" />
   <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
-  <package id="Simplic.Sql" version="6.1.18.625" targetFramework="net461" />
+  <package id="Simplic.Sql" version="6.2.18.926" targetFramework="net451" />
 </packages>
