--- a/simplic-interval/Simplic.Interval.UI/app.config
+++ b/simplic-interval/Simplic.Interval.UI/app.config
@@ -10,6 +10,10 @@
         <assemblyIdentity name="Telerik.Windows.Controls" publicKeyToken="5803cfa389c90ce7" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2018.3.1016.45" newVersion="2018.3.1016.45" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Telerik.Windows.Controls.RibbonView" publicKeyToken="5803cfa389c90ce7" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2018.3.1016.45" newVersion="2018.3.1016.45" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" /></startup></configuration>
