--- a/simplic-interval/Simplic.Interval.UI/packages.config
+++ b/simplic-interval/Simplic.Interval.UI/packages.config
@@ -4,5 +4,7 @@
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net451" />
   <package id="Simplic.CoreLib" version="6.16.18.1125" targetFramework="net451" />
   <package id="Simplic.Data" version="1.5.118.1029" targetFramework="net451" />
+  <package id="Simplic.Icon" version="6.0.18.620" targetFramework="net451" />
+  <package id="Simplic.Icon.UI" version="6.1.18.917" targetFramework="net451" />
   <package id="Simplic.Localization" version="6.0.118.913" targetFramework="net451" />
 </packages>
